--- a/profile.html
+++ b/profile.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Houssein Omar Salloum-Profile</h1>
+    </header>
+    <main>
+      <!--Profile img-->
+      <img src="./H.S PHOTO.jpeg" alt="myimg" />
+      <!--hyperlink to aboutme page-->
+      <a href="aboutme.html">About Me</a>
+    </main>
+    <footer>FE-Factory/FSW(31-32)</footer>
+  </body>
 </html>
