--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Profile</title>
+    <style>
+      body {
+        align-content: center;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -11,10 +17,15 @@
     </header>
     <main>
       <!--Profile img-->
-      <img src="./H.S PHOTO.jpeg" alt="myimg" />
+      <hr />
+      <img src="./H.S PHOTO.jpeg" width="200px" alt="myimg" />
       <!--hyperlink to aboutme page-->
+      <hr />
       <a href="aboutme.html">About Me</a>
     </main>
-    <footer>FE-Factory/FSW(31-32)</footer>
+    <footer>
+      <hr />
+      FE-Factory/FSW(31-32)
+    </footer>
   </body>
 </html>
