--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
   </head>
-  <body></body>
+  <body>
+    <h1>About Me</h1>
+    <p>
+      FSW Rookie <br />
+      Learning Html and CSS<br />
+      with the incrideble Instructor Mr.Taha
+    </p>
+  </body>
 </html>
